syntax = "proto3";

package proto;

message PingRequest{}
message PingResponse{}

service PingService {
  rpc Ping(PingRequest) returns (PingResponse);
}
